unpackaged/main/default/objects/litify_pm__Roles_Component_Compact_Layout__mdt/litify_pm__Roles_Component_Compact_Layout__mdt.object-meta.xml
<CustomObject>
    <description>The compact layouts that are found on the roles component.</description>
    <label>Roles Component Compact Layout</label>
    <pluralLabel>Roles Component Compact Layouts</pluralLabel>
</CustomObject>