unpackaged/main/default/objects/litify_pm__Roles_Component_Compact_Layout__mdt/fields/litify_pm__Bottom_Right_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Bottom_Right_Field_API_Name__c</fullName>
    <description>The value that appears in row two, column two of the compact layout.</description>
    <inlineHelpText>The value that appears in row two, column two of the compact layout.</inlineHelpText>
    <label>Bottom-Right Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>