unpackaged/main/default/objects/litify_pm__Roles_Component_Compact_Layout__mdt/fields/litify_pm__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Object_API_Name__c</fullName>
    <description>The API name of the object to query the fields from.</description>
    <inlineHelpText>The API name of the object to query the fields from.</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>