unpackaged/main/default/objects/litify_pm__Roles_Component_Compact_Layout__mdt/fields/litify_pm__Top_Left_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Top_Left_Field_API_Name__c</fullName>
    <description>The value that appears in row one, column one of the compact layout.</description>
    <inlineHelpText>The value that appears in row one, column one of the compact layout.</inlineHelpText>
    <label>Top-Left Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>